# cpp_lua_debug_trick

./: .gitignore  CMakeLists.txt  README.md  clean.sh  go.sh
c/: .gitignore
executable/: CMakeLists.txt  go.sh  main.cpp
scripts/: defs.lua  inner_update.lua  main.lua  update.lua
src/: lib.cpp
